# trip-viewer

./: .gitignore  ADDING_A_CAMERA.md  CLAUDE.md  DESIGN.md  LINUX_DEV_SETUP.md  README.md  TIMELAPSE_ALIGNMENT_REDESIGN.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: gen_tauri_keys.py  recover-timelapses-from-old-db.py  restore-missing-timelapse-jobs.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: dump_failed_timelapse_jobs.rs  scan_real.rs
src-tauri/src/: app_settings.rs  error.rs  lib.rs  migration_v2.rs  paths.rs  startup.rs
src-tauri/src/db/: manual_trip_merges.rs  migrations.rs  mod.rs  segments.rs  settings.rs
src-tauri/src/db/migrations/: 0011_drop_settings_table.sql  0013_timelapse_relative_paths.sql
src-tauri/src/gps/: mod.rs  seventy_mai.rs
src-tauri/src/import/: discovery.rs  distribute.rs  mod.rs  stage.rs  types.rs  wipe.rs
src-tauri/src/scan/: errors.rs  grouping.rs  naming.rs
src-tauri/src/scans/: coverage.rs
src-tauri/src/timelapse/: cleanup.rs  commands.rs  concurrency.rs  ffmpeg.rs  speed_curve.rs  worker.rs
src-tauri/src/trips/: commands.rs  merge.rs
src/components/: KeyboardShortcutsHelp.tsx  StartupSplash.tsx
src/components/import/: ImportConfirmDialog.tsx  WipeConfirmDialog.tsx  WipeErrorDialog.tsx
src/components/loader/: TripList.tsx
src/components/map/: MapPanel.tsx  VehicleMarker.tsx
src/components/review/: DeleteOriginalsDialog.tsx  DeleteSelectedSegmentsDialog.tsx  tripArchiveStatus.test.ts  tripArchiveStatus.ts
src/components/scan/: ScanView.tsx
src/components/timelapse/: TimelapseView.tsx
src/components/video/: ChannelPanel.tsx  PlayerShell.tsx  VideoGrid.tsx  decideShowMap.test.ts  decideShowMap.ts
src/components/welcome/: WelcomePanel.tsx
src/engine/: SyncEngine.ts  interpolate.ts  useSyncEngine.ts
src/ipc/: importer.ts  startup.ts  timelapse.ts
src/state/: store.ts  timelapseSlice.ts
src/types/: import.ts  model.ts
src/utils/: recordingMode.ts  speedCurve.test.ts  speedCurve.ts  tripTime.ts
